--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "OhDear\\ScheduleMonitor\\ScheduleMonitorServiceProvider"
+                "Spatie\\ScheduleMonitor\\ScheduleMonitorServiceProvider"
             ]
         }
     },
