--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.4",
-        "illuminate/bus": "^7.19",
+        "illuminate/bus": "^7.19|^8.0",
         "lorisleiva/cron-translator": "^0.1.1"
     },
     "require-dev": {
