--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,18 @@
     ],
     "require": {
         "php": "^7.4",
-        "illuminate/bus": "^7.19",
+        "illuminate/bus": "^7.19|^8.0",
         "lorisleiva/cron-translator": "^0.1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^5.0",
+        "laravel/legacy-factories": "^1.0",
+        "ohdearapp/ohdear-php-sdk": "^3.0",
+        "orchestra/testbench": "^5.0|^6.0",
         "phpunit/phpunit": "^9.0",
-        "psalm/plugin-laravel": "^1.2",
         "spatie/phpunit-snapshot-assertions": "^4.2",
         "spatie/test-time": "^1.2",
-        "vimeo/psalm": "^3.11",
-        "ohdearapp/ohdear-php-sdk": "^3.0"
+        "vimeo/psalm": "^3.11"
     },
     "suggest": {
         "ohdearapp/ohdear-php-sdk": "Needed to sync your schedule with Oh Dear"
