--- a/tests/Commands/__snapshots__/SyncCommandTest__it_can_sync_the_schedule_with_the_db_and_oh_dear__1.yml
+++ b/tests/Commands/__snapshots__/SyncCommandTest__it_can_sync_the_schedule_with_the_db_and_oh_dear__1.yml
@@ -24,5 +24,5 @@
     type: cron
     cron_expression: '0 0 * * *'
     grace_time_in_minutes: 5
-    server_timezone: UTC
+    server_timezone: Asia/Kolkata
     description: ''
