--- a/composer.json
+++ b/composer.json
@@ -16,20 +16,20 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "illuminate/bus": "^8.0",
         "nesbot/carbon": "^2.41.3",
         "lorisleiva/cron-translator": "^0.1.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
         "laravel/legacy-factories": "^1.0.4",
         "ohdearapp/ohdear-php-sdk": "^3.0",
         "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.3",
         "spatie/phpunit-snapshot-assertions": "^4.2",
         "spatie/test-time": "^1.2",
-        "vimeo/psalm": "^3.11"
+        "vimeo/psalm": "^4.0",
+        "mockery/mockery": "^1.4"
     },
     "suggest": {
         "ohdearapp/ohdear-php-sdk": "Needed to sync your schedule with Oh Dear"
