--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "spatie/laravel-schedule-monitor",
+    "type": "laravel-module",
     "description": "Monitor scheduled tasks in a Laravel app",
     "keywords": [
         "spatie",
