--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
     "require": {
         "php": "^7.4|^8.0",
         "illuminate/bus": "^8.0",
+        "lorisleiva/cron-translator": "^0.2.0",
         "nesbot/carbon": "^2.41.3",
-        "lorisleiva/cron-translator": "^0.2.0"
+        "spatie/laravel-package-tools": "^1.9"
     },
     "require-dev": {
         "laravel/legacy-factories": "^1.0.4",
