--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,15 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/bus": "^8.71|^9.0",
+        "php": "^8.0",
+        "illuminate/bus": "^9.0",
         "lorisleiva/cron-translator": "^0.3.0",
         "nesbot/carbon": "^2.41.3",
         "spatie/laravel-package-tools": "^1.9"
     },
     "require-dev": {
-        "laravel/legacy-factories": "^1.0.4",
         "ohdearapp/ohdear-php-sdk": "^3.0",
-        "orchestra/testbench": "^6.20|^7.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.4",
         "spatie/phpunit-snapshot-assertions": "^4.2",
         "spatie/test-time": "^1.2",
@@ -46,13 +45,15 @@
         }
     },
     "scripts": {
-        "psalm": "vendor/bin/psalm",
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     },
     "extra": {
         "laravel": {
