--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.0",
         "illuminate/bus": "^9.0",
-        "lorisleiva/cron-translator": "^0.3.0",
+        "lorisleiva/cron-translator": "^0.3.0|^0.4.0",
         "nesbot/carbon": "^2.41.3",
         "nunomaduro/termwind": "^1.10.1",
         "spatie/laravel-package-tools": "^1.9"
