--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "orchestra/testbench": "^7.0|^8.0",
         "pestphp/pest": "^1.20",
         "pestphp/pest-plugin-laravel": "^1.2",
+        "spatie/pest-plugin-snapshots": "^1.1",
         "spatie/phpunit-snapshot-assertions": "^4.2",
         "spatie/test-time": "^1.2"
     },
