--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,20 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/bus": "^9.0|^10.0",
+        "illuminate/bus": "^9.0|^10.0|^11.0",
         "lorisleiva/cron-translator": "^0.3.0|^0.4.0",
-        "nesbot/carbon": "^2.63",
+        "nesbot/carbon": "^2.63|^3.0",
         "nunomaduro/termwind": "^1.10.1|^2.0",
         "spatie/laravel-package-tools": "^1.9"
     },
     "require-dev": {
         "mockery/mockery": "^1.4",
         "ohdearapp/ohdear-php-sdk": "^3.0",
-        "orchestra/testbench": "^7.0|^8.0",
-        "pestphp/pest": "^1.20",
-        "pestphp/pest-plugin-laravel": "^1.2",
-        "spatie/pest-plugin-snapshots": "^1.1",
-        "spatie/phpunit-snapshot-assertions": "^4.2",
+        "orchestra/testbench": "^7.0|^8.0|^9.0",
+        "pestphp/pest": "^1.20|^2.34",
+        "pestphp/pest-plugin-laravel": "^1.2|^2.3",
+        "spatie/pest-plugin-snapshots": "^1.1|^2.1",
+        "spatie/phpunit-snapshot-assertions": "^4.2|^5.1",
         "spatie/test-time": "^1.2"
     },
     "suggest": {
