--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: [8.2, 8.1, 8.0]
+        php: [8.4, 8.3, 8.2, 8.1]
         laravel: ['9.*', '10.*', '11.*']
         stability: [prefer-lowest, prefer-stable]
         include:
