--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/bus": "^9.0|^10.0|^11.0",
+        "illuminate/bus": "^9.0|^10.0|^11.0|^12.0",
         "lorisleiva/cron-translator": "^0.3.0|^0.4.0",
         "nesbot/carbon": "^2.63|^3.0",
         "nunomaduro/termwind": "^1.10.1|^2.0",
@@ -26,9 +26,9 @@
     "require-dev": {
         "mockery/mockery": "^1.4",
         "ohdearapp/ohdear-php-sdk": "^3.0",
-        "orchestra/testbench": "^7.0|^8.0|^9.0",
-        "pestphp/pest": "^1.20|^2.34",
-        "pestphp/pest-plugin-laravel": "^1.2|^2.3",
+        "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
+        "pestphp/pest": "^1.20|^2.34|^3.7",
+        "pestphp/pest-plugin-laravel": "^1.2|^2.3|^3.1",
         "spatie/pest-plugin-snapshots": "^1.1|^2.1",
         "spatie/phpunit-snapshot-assertions": "^4.2|^5.1",
         "spatie/test-time": "^1.2"
