--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "lorisleiva/cron-translator": "^0.3.0|^0.4.0",
         "nesbot/carbon": "^2.63|^3.0",
         "nunomaduro/termwind": "^1.10.1|^2.0",
+        "ohdearapp/ohdear-php-sdk": "^3.10",
         "spatie/laravel-package-tools": "^1.9"
     },
     "require-dev": {
