--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
+        "orchestra/testbench": "^10.0",
         "pestphp/pest": "^1.20|^2.34|^3.7",
         "pestphp/pest-plugin-laravel": "^1.2|^2.3|^3.1",
         "spatie/pest-plugin-snapshots": "^1.1|^2.1",
