--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
         "spatie/laravel-package-tools": "^1.9"
     },
     "require-dev": {
+        "guzzlehttp/guzzle": "^7.2",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^10.0",
+        "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
         "pestphp/pest": "^1.20|^2.34|^3.7",
         "pestphp/pest-plugin-laravel": "^1.2|^2.3|^3.1",
         "spatie/pest-plugin-snapshots": "^1.1|^2.1",
